<resources>
    <string name="app_name">CityReports</string>
    <string name="Login_email">Enter your username</string>
    <string name="Login_senha">Enter your password</string>
    <string name="Login_button_registo">Sign up</string>
    <string name="Login_button_login">Login</string>
    <string name="add_note">Add note</string>
    <string name="home">Home</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="title_activity_initial_page">Map</string>
    <string name="my_notes">My notes</string>
    <string name="my_occurrences">My occurrences</string>
    <string name="perfil" translatable="false">Perfil</string>
    <string name="logout">Logout</string>
    <string name="notes">Notes</string>
    <string name="create_note">Create note</string>
    <string name="save">Save</string>
    <string name="note">Note</string>
    <string name="sp_login">sp_login</string>
    <string name="sp_login_value">sp_login_value</string>
    <string name="sp_userid_value">sp_userid_value</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_saved">Note saved</string>
    <string name="login_fail">username or password invalid</string>
    <string name="welcome">welcome</string>
    <string name="ocurrences">ocurrences</string>
    <string name="Description">Description</string>
    <string name="take_photo">Take a photo</string>
    <string name="update_local">Update localization</string>
    <string-array name="type_array">
        <item>Transito</item>
        <item>Buraco na via</item>
    </string-array>
    <string name="type">Type</string>
    <string name="enable_gps">Enable gps</string>
    <string name="try_again">Try again</string>
    <string name="filter_km">filter</string>
    <string name="type_filter">Type Filter</string>
    <string name="changes_not_saved">The changes were not saved</string>
    <string name="empy_fields">Empy fields</string>
    <string name="ocurrence_deleted">Ocurrence deleted</string>

</resources>